--- a/gb/19/11/27/n11684408.md
+++ b/gb/19/11/27/n11684408.md
@@ -1,16 +1,16 @@
 <a name="1" id="1" target="_blank"></a><span id="1"></span>
-<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/utwpym373/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/utwpym373/www/master/t/djy/1.jpg" title="大纪元"></a><a href="https://github.com/utwpym373/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/utwpym373/www/master/t/djy/3.jpg" title="国际新闻"></a><a href="https://github.com/utwpym373/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/utwpym373/www/master/t/djy/4.jpg" title="大陆新闻"></a><a href="https://github.com/utwpym373/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/utwpym373/www/master/t/djy/5.jpg" title="评论"></a><a href="https://github.com/utwpym373/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/utwpym373/www/master/t/djy/6.jpg" title="文化"></a><a href="https://github.com/utwpym373/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/utwpym373/www/master/t/djy/7.jpg" title="生活"></a><a href="https://github.com/utwpym373/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/utwpym373/www/master/t/djy/8.jpg" title="娱乐"></a><a href="https://github.com/utwpym373/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/utwpym373/www/master/t/djy/9.jpg" title="健康"><a href="https://github.com/utwpym373/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/utwpym373/www/master/t/djy/10a.jpg" title="独家"></a><a href="https://github.com/utwpym373/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/utwpym373/www/master/t/djy/12a.jpg" title="头条"></a></td></tr>
-<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/utwpym373/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/utwpym373/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/utwpym373/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/utwpym373/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/utwpym373/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/utwpym373/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/utwpym373/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/utwpym373/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/utwpym373/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/utwpym373/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/utwpym373/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/utwpym373/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/utwpym373/www/blob/master/README.md?zsrh#8">翻墙</a></p><p><a target="_blank" href="https://github.com/utwpym373/djy/blob/master/gb/nf5562.md#1">伪火</a> | <a target="_blank" href="https://github.com/utwpym373/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/utwpym373/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/utwpym373/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/utwpym373/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/utwpym373/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/utwpym373/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/utwpym373/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/utwpym373/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/utwpym373/ntdtv/blob/master/gb/prog1530_1.md#1">和平抗议</a> | <a target="_blank" href="https://github.com/utwpym373/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/utwpym373/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/utwpym373/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/utwpym373/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
+<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/kobfyi3602/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/kobfyi3602/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/kobfyi3602/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/kobfyi3602/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/kobfyi3602/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/kobfyi3602/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/kobfyi3602/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/kobfyi3602/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/kobfyi3602/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/kobfyi3602/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/kobfyi3602/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/kobfyi3602/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/kobfyi3602/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/kobfyi3602/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/kobfyi3602/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/kobfyi3602/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/kobfyi3602/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/kobfyi3602/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/kobfyi3602/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/kobfyi3602/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
+<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/kobfyi3602/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/kobfyi3602/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/kobfyi3602/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
 <tr><td VALIGN=TOP width="626"><h2 align=center>预算如实编列 苗议员：不滥编、浮编</h2>
 <img width="600" src="https://i.epochtimes.com/assets/uploads/2019/11/cd89eced10e3a1554b31fe12e84e4df0-600x400.jpeg" />
 <h6>余文忠议员质询。（许享富／大纪元）
 </h6>
 <hr>
 <p>【大纪元2019年11月27日讯】（大纪元记者陈文敏台湾苗栗报导）苗栗县议员余文忠在11月27日县政总质询时，他表示，预算如实编列，苗栗不是二等国民；他指出，许多乡亲们关心的预算问题，有些议会同仁都只想减预算，</p>
-<p>减一些例行性的社福<ahref="https://github.com/utwpym373/djy/blob/master/gb/tag/%E8%A1%A5%E5%8A%A9.md#1">补助</a>预算，军公教退休人员活动补助，乡镇首长考察经费，这只占<ahref="https://github.com/utwpym373/djy/blob/master/gb/tag/%E6%80%BB%E9%A2%84%E7%AE%97.md#1">总预算</a>200多亿的万分之一；他说，平均县民分配到的只有3万7千多块凭什么我们比别的县市少?难道我们真的是二等国民吗?</p>
+<p>减一些例行性的社福<ahref="https://github.com/kobfyi3602/djy/blob/master/gb/tag/%E8%A1%A5%E5%8A%A9.md#1">补助</a>预算，军公教退休人员活动补助，乡镇首长考察经费，这只占<ahref="https://github.com/kobfyi3602/djy/blob/master/gb/tag/%E6%80%BB%E9%A2%84%E7%AE%97.md#1">总预算</a>200多亿的万分之一；他说，平均县民分配到的只有3万7千多块凭什么我们比别的县市少?难道我们真的是二等国民吗?</p>
 <p>余文忠指出，县长徐耀昌就任以来，经常要为苗栗县政总体预算烦恼，甚至跑中央要钱，这是众所皆知，为了符合中央财政控管机制，县长不断要求各局处在编列预算时，必须敷实编列、不可滥编、浮编，加上省吃俭用，已创下连续三年岁入岁出余绌的纪录。</p>
 <p>余文忠表示，勤俭持家是客家人传统美德，但苗栗县民、公务人员，警察、消防队员的权益不能因此而受损，苗栗乡亲同样纳税，希望各局处还是要确实补足所需之经费，不能让苗栗人成为二等国民。</p>
-<p>余文忠更提出，苗栗县生育<ahref="https://github.com/utwpym373/djy/blob/master/gb/tag/%E8%A1%A5%E5%8A%A9.md#1">补助</a>津贴目前是6600元，但去年3000万元经费，执行率只有一半左右，建议民政处因应少子化，能够加码补助，鼓励年轻人多生育。</p>
+<p>余文忠更提出，苗栗县生育<ahref="https://github.com/kobfyi3602/djy/blob/master/gb/tag/%E8%A1%A5%E5%8A%A9.md#1">补助</a>津贴目前是6600元，但去年3000万元经费，执行率只有一半左右，建议民政处因应少子化，能够加码补助，鼓励年轻人多生育。</p>
 <p>余文忠建议：1、请各局处.足额编列合法正常所需预算。2、弱势.残障.社福.新住民.原住民.单亲.公益团体.福利不可因为财政困难而减少补助。3、针对少子化现象，生育补助津贴建议由6600增加为12000。</p>
 <p>余文忠更指出，健全福利、装备齐全、警消安心；建议：警消人员装备须补足；休假制度合理、正常化；建立警消经验传承制度。</p>
 <p>余文忠表示，拒绝毒害健康苗栗。建立跨局处防毒通报机制、不断更新毒品犯罪手法、定期宣导校园毒品防治。</p>
@@ -21,48 +21,41 @@
 
 
 <strong>相关新闻：</strong>
-<li><a href="https://github.com/utwpym373/djy/blob/master/gb/19/1/2/n10948620.md#1">台立法院加开临时会 仅处理总预算案</a></li>
-<li><a href="https://github.com/utwpym373/djy/blob/master/gb/19/8/30/n11487769.md#1">台中2020年度总预算  社福岁出成长30%居首</a></li>
-<li><a href="https://github.com/utwpym373/djy/blob/master/gb/19/10/29/n11619364.md#1">政府8亿元补助大型农机  农业发展迈崭新阶段</a></li>
-<li><a href="https://github.com/utwpym373/djy/blob/master/gb/19/10/31/n11624404.md#1">市长不回议会报告 绿议员拒审总预算</a></li>
-<li><a href="https://github.com/utwpym373/djy/blob/master/gb/19/10/31/n11624678.md#1">高市议会总预算审查 蓝绿议员爆肢体冲突</a></li>
-<li><a href="https://github.com/utwpym373/djy/blob/master/gb/19/11/26/n11681782.md#1">修正县府第二预备金 尽快修二备金使用乱象</a></li>
-<li><a href="https://github.com/utwpym373/djy/blob/master/gb/20/8/30/n12367224.md#1">感恩有你！国际同济KCF为贫困童点亮心灯</a></li>
-<li><a href="https://github.com/utwpym373/djy/blob/master/gb/20/8/29/n12366313.md#1">传达心声 “全长联”用心当桥梁获中央肯定</a></li>
-<li><a href="https://github.com/utwpym373/djy/blob/master/gb/20/8/28/n12363983.md#1">告别单身联谊 双铁之旅8/31开放报名</a></li>
-<li><a href="https://github.com/utwpym373/djy/blob/master/gb/20/8/28/n12364081.md#1">罹患“产前”忧郁症 擅自停药风险更高</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/19/1/2/n10948620.md#1">台立法院加开临时会 仅处理总预算案</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/19/8/30/n11487769.md#1">台中109年度总预算  社福岁出成长30%居首</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/19/10/29/n11619364.md#1">政府8亿元补助大型农机  农业发展迈崭新阶段</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/19/10/31/n11624404.md#1">市长不回议会报告 绿议员拒审总预算</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/19/10/31/n11624678.md#1">高市议会总预算审查 蓝绿议员爆肢体冲突</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/19/11/26/n11681782.md#1">修正县府第二预备金 尽快修二备金使用乱象</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/20/3/17/n11947160.md#1">中央地方齐心防疫 警政署长到竹县慰勉基层</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/20/3/17/n11946746.md#1">幸福很简单 大川护理之家助一圆回家梦</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/20/3/17/n11946681.md#1">苗消防之友会 表扬108年救灾救护有功人员</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/20/3/17/n11946570.md#1">39年园区瓶颈路段有解 高峰路将要拓宽了</a></li>
 <hr>
 
 
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/onzhi266/djy/blob/master/gb/20/2/22/n11887949.md#1">美参议员：中共刻意控制新冠病毒信息流动</a></li>
-<li><a href="https://github.com/tsiac2612/djy/blob/master/gb/17/11/24/n9888434.md#1" target="_blank">杨宁：周恩来初恋女友投河 其子被打成右派</a></li><li><a href="https://github.com/utwpym373/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank">追寻真理 这书讲什么</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/14/10/23/n4278972.md#1" target="_blank">阚神州：中共行株连之罪恶 肇残民之祸</a></li>
+<li><a href="https://github.com/ychojm359/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank">探寻真相兼听则明</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/7/17/n10569800.md#1" target="_blank">刘晓：中共效仿纳粹大规模焚书 结局相同</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/16/5/2/n7794877.md#1" target="_blank">矿难幸存者神奇扔掉双拐重新站起</a></li>
 <hr>
 
 <strong>热门新闻：</strong>
-<li><a href="https://github.com/bhtakl332/djy/blob/master/gb/20/8/23/n12352151.md#1">清朝官场惊魂奇闻 原是前世埋下祸根</a></li>
-<li><a href="https://github.com/bhtakl332/djy/blob/master/gb/20/8/24/n12353266.md#1">疫情中返台居家隔离日记（上）</a></li>
-<li><a href="https://github.com/bhtakl332/djy/blob/master/gb/20/8/28/n12363346.md#1">拯救垂死的鱼 一群猪因善行成为网红</a></li>
-<li><a href="https://github.com/bhtakl332/djy/blob/master/gb/20/8/24/n12353478.md#1">以色列培育红母牛 为《圣经》末日预言准备</a></li>
-<li><a href="https://github.com/bhtakl332/djy/blob/master/gb/20/6/29/n12218273.md#1">违背原著的宝玉出家</a></li>
-<li><a href="https://github.com/bhtakl332/djy/blob/master/gb/20/8/29/n12365800.md#1">【西岸观察】中共学者盗美教授研究成果被捕</a></li>
-<li><a href="https://github.com/bhtakl332/djy/blob/master/gb/20/8/28/n12365307.md#1">【珍言真语】杰斯：港人要顶住 莫被大深圳蚕食</a></li>
-<li><a href="https://github.com/bhtakl332/djy/blob/master/gb/20/8/29/n12365852.md#1">【拍案惊奇】华为猛加班抗美 中共经济死螺旋</a></li>
-<li><a href="https://github.com/bhtakl332/djy/blob/master/gb/20/8/27/n12362618.md#1">台湾馆长陈之汉遭枪击 一男子携枪弹自首</a></li>
-<li><a href="https://github.com/bhtakl332/djy/blob/master/gb/20/8/26/n12359708.md#1">【新闻看点】中共南海射导弹 美防长回应习近平</a></li>
-<li><a href="https://github.com/bhtakl332/djy/blob/master/gb/20/8/27/n12362179.md#1">“破船要沉”中国高端低端人口纷纷逃亡</a></li>
-<li><a href="https://github.com/bhtakl332/djy/blob/master/gb/20/8/28/n12365016.md#1">成龙北京豪宅被拍卖 入住13年突遭查封</a></li>
-<li><a href="https://github.com/bhtakl332/djy/blob/master/gb/20/8/27/n12362745.md#1">台湾网红馆长陈之汉遭枪击 鲜血直流紧急送医</a></li>
-<li><a href="https://github.com/bhtakl332/djy/blob/master/gb/20/8/27/n12362251.md#1">赞台湾民主自由 中国网红微博账号遭永久删除</a></li>
-<li><a href="https://github.com/bhtakl332/djy/blob/master/gb/20/8/27/n12362661.md#1">福布斯中国名人榜出炉 美籍刘亦菲入选遭质疑</a></li>
-<li><a href="https://github.com/bhtakl332/djy/blob/master/gb/20/8/28/n12365345.md#1">台湾馆长遭枪击 杜汶泽看直播喊话：要撑住</a></li>
-<li><a href="https://github.com/bhtakl332/djy/blob/master/gb/20/8/26/n12357679.md#1">自制6种“天然清洁剂” 难缠污垢一次搞定</a></li>
-<li><a href="https://github.com/bhtakl332/djy/blob/master/gb/20/8/26/n12359464.md#1">胃癌大多是吃出来的！少碰3种食物 不让癌上身</a></li>
-<li><a href="https://github.com/bhtakl332/djy/blob/master/gb/20/8/28/n12363346.md#1">拯救垂死的鱼 一群猪因善行成为网红</a></li>
-<li><a href="https://github.com/bhtakl332/djy/blob/master/gb/20/8/28/n12363839.md#1">在台湾待一段时间 大陆网红赞高自由度</a></li>
-<li><a href="https://github.com/bhtakl332/djy/blob/master/gb/20/8/28/n12363975.md#1">安倍晋三因溃疡性大肠炎再辞职！4症状是警讯</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/20/3/16/n11945071.md#1">【新闻看点】官媒忙降温？赵立坚及五毛被打脸</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/20/3/16/n11943071.md#1">【现场视频】武汉医生揭中共关闭方舱内幕</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/20/3/15/n11942229.md#1">大陆原卫生高官：疫情恐再爆发 谎言将破灭</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/20/3/15/n11942675.md#1">任志强失联4天 其好友求救外媒向中共施压</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/20/3/16/n11945291.md#1">蓬佩奥与杨洁篪通话 正告北京勿散怪诞谣言</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/20/3/15/n11942589.md#1">赵立坚甩锅病毒源自美国 艺人黄秋生狠酸中共</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/20/3/17/n11946544.md#1">台歌仔戏国宝小凤仙病逝 享寿80岁　</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/20/3/15/n11942781.md#1">潘迎紫呼吸道感染急就医 被要求检测新冠病毒</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/20/3/15/n11942415.md#1">西班牙疫情大爆发 梁咏琪一家三口封城前返港</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/20/3/16/n11945468.md#1">赵丽颖复工晒片场照 吊超高威亚压根看不到人</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/20/3/11/n11933369.md#1">清朝学士三奇梦 是谁掌握他的一生？</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/20/1/2/n11764074.md#1">他们身上的毒疮 原来是夙怨</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/13/1/31/n3790016.md#1">米开朗基罗Michelangelo（1）早年生涯</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/20/3/7/n11923201.md#1">【历史回眸】抵抗极权 最简单的方法是拒绝说谎</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/20/3/6/n11920418.md#1">线条魔术家  白描大师李公麟和五马图</a></li>
 <hr>
 
-<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/utwpym373/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/utwpym373/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/19/11/27/n11684408.htm">预算如实编列 苗议员：不滥编、浮编</a></p><hr>
+<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/kobfyi3602/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/kobfyi3602/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/19/11/27/n11684408.htm">预算如实编列 苗议员：不滥编、浮编</a></p><hr>
 
-<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="http://www.szzd.org/v.php?action=qrcode&url=https://github.com/utwpym373/djy/blob/master/gb/19/11/27/n11684408.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/utwpym373/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/utwpym373/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/utwpym373/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/utwpym373/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/utwpym373/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/utwpym373/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/utwpym373/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/utwpym373/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/utwpym373/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/utwpym373/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/utwpym373/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/utwpym373/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/utwpym373/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/utwpym373/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/utwpym373/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/utwpym373/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/utwpym373/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/utwpym373/djy/master/gb/300/st1.jpg" title="关注3亿人三退"  alt="关注3亿人三退"></a><br><a href="https://github.com/utwpym373/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/utwpym373/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/utwpym373/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/utwpym373/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/utwpym373/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/utwpym373/djy/master/gb/300/sj1.jpg" title="303万人举报江泽民"  alt="303万人举报江泽民"></a><br><a href="https://github.com/utwpym373/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/utwpym373/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/utwpym373/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/utwpym373/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/utwpym373/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/utwpym373/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/utwpym373/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/utwpym373/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/utwpym373/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/utwpym373/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/utwpym373/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/utwpym373/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/utwpym373/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/utwpym373/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/utwpym373/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/utwpym373/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/utwpym373/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/utwpym373/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/utwpym373/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/utwpym373/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/utwpym373/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/utwpym373/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/utwpym373/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/utwpym373/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
+<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/kobfyi3602/djy/blob/master/gb/19/11/27/n11684408.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/kobfyi3602/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/kobfyi3602/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/kobfyi3602/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
